Table departments {
  id int [pk, increment]
  name varchar [not null]
}

Table degree_programs {
  id int [pk, increment]
  name varchar [not null]
  department_id int [not null, ref: > departments.id]
}

Table courses {
  id int [pk, increment]
  name varchar [not null]
  degree_program_id int [not null, ref: > degree_programs.id]
}

Table teachers {
  id int [pk, increment]
  name varchar [not null]
}

Table students {
  id int [pk, increment]
  name varchar [not null]
  degree_program_id int [not null, ref: > degree_programs.id]
}

Table exam_sessions {
  id int [pk, increment]
  date date [not null]
  course_id int [not null, ref: > courses.id]
}

// Junction Tables

Table courses_teachers {
  teacher_id int [not null, ref: > teachers.id]
  course_id int [not null, ref: > courses.id]

  indexes {
    (teacher_id, course_id) [pk]
  }
}

Table exam_session_registrations {
  student_id int [not null, ref: > students.id]
  exam_session_id int [not null, ref: > exam_sessions.id]
  grade int [null]

  indexes {
    (student_id, exam_session_id) [pk]
  }
}
